# QtProtobufNestedCrash

./: CMakeLists.txt  LICENSE  README.md  main.cpp
proto/: project.proto
